# Atlas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ABOUT_ATLAS.md  BRANCHES_CONTEXT.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEVELOPMENT_LOCAL_SETUP.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  Dockerfile  E1_START.md  E4_GA_VALIDATION_REPORT.md  E4_TEST_SUMMARY.txt  FAB_C_PLUS_CHECKLIST.md  FAB_C_PLUS_CRITICAL_FIXES.md  FAB_C_PLUS_FINAL_REPORT.md  FAB_C_PLUS_MICRO_OPTIMIZATIONS.md  FAB_C_PLUS_STATUS.md  FAB_P0_PATCHES_COMPLETE.md  FAB_PHASE1_COMPLETE.md  FAB_PHASE_A_STATUS.md  FAB_v0.1_STATUS.md  FEATURE_BRANCHES_v0.2.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_SETUP_COMPLETE.md  MODEL_CARD.md  Makefile  NOTICE.md  PREPARATION_COMPLETE.md  PUSH_READY.md  QUICK_SUMMARY.md  README.md  READY_TO_CODE.md  RELEASE_NOTES_v0.2.0-alpha1.md  SECURITY.md  (+11 more)
.github/: COPILOT_INSTRUCTIONS.md  FEATURE_v0.2-03-api-hier-ops.md  FEATURE_v0.2-04-losses-hier.md  FEATURE_v0.2-05-distill-teacher.md  FEATURE_v0.2-06-metrics-hier.md  FEATURE_v0.2-07-benchmarks.md  FEATURE_v0.2-08-docs-demos-cli.md  pull_request_template.md  pull_request_template_v0.2-01.md
.github/workflows/: README.md  ci.yml  exp_self_smoke.yml  (+3 more)
dashboards/: phase_b_slo_dashboard.json
demos/: demo_01_basic.md  demo_02_hierarchical.md  demo_03_cli.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ATLAS_BETA_DEVELOPMENT_STATUS.md  ATLAS_BETA_TASKS.md  AURIS_FAB_Integration_Plan_v0.1.txt  B1_HYSTERESIS.md  B3_TELEMETRY.md  B4_CI_QUALITY_GATES.md  DATA_CARD.md  DISENTANGLEMENT.md  E1_COMPLETION_SUMMARY.md  E1_E3_ROADMAP.md  E2_COMPLETION_SUMMARY.md  E3_COMPLETION_SUMMARY.md  E4_PLAN_HOMEOSTASIS.md  GITHUB_AUTOMATION_STATUS.md  GITHUB_CLI_CHEATSHEET.md  GITHUB_ISSUES_v0.2.md  HIERARCHICAL_IMPLEMENTATION.md  HIERARCHICAL_SCHEMA_v0.2.md  HIERARCHICAL_SPACE.md  INTERPRETABILITY_METRICS.md  LICENSING.md  METRICS_v0.2.md  NFR.md  PHASE_B_QUICK_START.md  PHASE_B_ROADMAP.md  PHASE_B_TO_C_RUNBOOK.md  PHASE_C_DEPLOYMENT_LOG.md  PHASE_C_SYNC.md  PR_SCOPE_CHECKLIST.md  QUICK_REFERENCE.md  SAFETY_BOUNDARIES.md  SELF_CANARY_ENHANCEMENT.md  SELF_EXPERIMENTAL.md  SELF_QUICK_START.md  SESSION_E2_E3_MERGE.md  TZ_ATLAS_BETA.md  WIRING_DIAGRAM.md  distillation_quickstart.md  (+20 more)
docs_fab/: AURIS_FAB_Phase_C_plus_Plan.md  FAB_FULL_SPEC_v1.0.md  FAB_INTRO_CONTEXT.md  FAB_OVERVIEW.md  FAB_Phase_A_MVP_Review.md  FAB_Phase_B5_Diagnostics_Plan.md  FAB_Phase_C_plus_Hardened_Review.md
examples/: basic_usage.py  comprehensive_demo.py  problem_statement_example.py  summarize_example.py  visualization.py
migrations/: 2025-10-22_v0_5_3.sql  2025-10-23_v0_6_0_reticulum.sql
samples/: README.md  golden_samples.json
scripts/: benchmark_hierarchical.py  hysteresis_probe_exp.py  pr_guard.py  resonance_test.py  run_api.py  self_integration_check.py  self_replay_exp.py  smoke_test_wiring.py  stability_probe_exp.py  validate_baseline.py
tests/: __init__.py  conftest.py  test_actions.py  test_api.py  test_api_smoke.py  test_audit.py  test_backpressure.py  test_canary_exp.py  test_cli.py  test_decision_engine.py  test_decoder.py  test_diagnostics.py  test_dimensions.py  test_distill.py  test_encoder.py  test_envelope.py  test_exp_prom_exporter.py  test_fab_c_plus_integration.py  test_fab_diagnostics_integration.py  test_fab_routes.py  test_fab_shadow_api.py  test_fab_transitions.py  test_fill_mix_contracts.py  test_golden_samples.py  test_helpers.py  test_hierarchical.py  test_homeostasis_integration.py  test_homeostasis_metrics.py  test_homeostasis_routes.py  test_hysteresis.py  test_hysteresis_exp.py  test_hysteresis_hook_exp.py  test_interpretable_decoder.py  test_losses.py  test_memory_api.py  test_memory_persistence.py  test_metrics_hier.py  test_policy_engine.py  test_query_cache_and_incremental.py  test_rebalance.py  (+28 more)
tools/: create_issues_v0.2.sh  create_prs_v0.2.sh  manage_v0.2.sh
(+121 files in other folders)
